<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#080705">

        <TextView
            android:id="@+id/Title"
            android:layout_width="225dp"
            android:layout_height="83dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:hint="@string/hint_animal"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="49dp"
            android:layout_marginRight="21dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:src="@drawable/LogoLightPNG" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="377dp"
        android:layout_height="740dp"
        android:background="@drawable/body"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="713dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="504dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="top"
                android:text="@string/introduce_animal"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/inputtext"
                android:ems="10"
                android:gravity="center|center_horizontal"
                android:hint="Valor 1"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="top"
                android:text="@string/introduce_tipo_animal"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/inputtext"
                android:ems="10"
                android:gravity="center|center_horizontal"
                android:hint="@string/hint_domestico_salvaje"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="top"
                android:text="@string/introduce_alimentacion"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputtext"
                android:ems="10"
                android:gravity="center|center_horizontal"
                android:hint="@string/hint_alimentacion"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="7dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:gravity="center|center_horizontal"
                    android:text="@string/guardar"
                    app:cornerRadius="7dp"
                    app:strokeColor="#8CB2F8"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:gravity="center|center_horizontal"
                    android:text="@string/buscar"
                    app:cornerRadius="7dp"
                    app:strokeColor="#8CB2F8"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:gravity="center|center_horizontal"
                    android:text="@string/borrar"
                    app:cornerRadius="7dp"
                    app:strokeColor="#8CB2F8"
                    app:strokeWidth="2dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/MostrarTodos"
                android:layout_width="330dp"
                android:layout_height="306dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/text"
                android:gravity="center|center_horizontal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="194dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:gravity="center_horizontal"
                    android:text="@string/mostrar_todos"
                    app:cornerRadius="7dp"
                    app:strokeColor="#8CB2F8"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="112dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:gravity="center_horizontal"
                    android:text="@string/limpiar"
                    app:cornerRadius="7dp"
                    app:strokeColor="#8CB2F8"
                    app:strokeWidth="2dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/names"
                android:layout_width="wrap_content"
                android:layout_height="11dp"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="2dp"
                android:text="@string/names"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
